add more comparison and clean up code

--- a/inst/rmd/dose_response_analysis.Rmd
+++ b/inst/rmd/dose_response_analysis.Rmd
@@ -23,7 +23,7 @@ The Hill Equation or 4 parameter logistic (4PL) model is a standard model often 
 ### Equation and Parameters of the 4PL Model
 
 $$
-f(X, HillSlope, top, bottom, EC_{50}) = bottom + \frac{top - bottom}{1 + 10^{(LogEC_{50} - Log(X)) * HillSlope}}
+f(X, HillSlope, top, bottom, EC_{50}) = bottom + \frac{top - bottom}{1 + 10^{(Log(EC_{50}) - Log(X)) * HillSlope}}
 $$
 
 1. Minimum response (Bottom). The Y value at the minimal curve asymptote (Bottom Plateau). 
@@ -36,28 +36,14 @@ $$
 
 ## Demo 
 
+### Code and Data
+
 ```{r, results = 'hide', message = FALSE}
 if (!require("tidyverse", character.only = TRUE)) {
     install.packages("tidyverse", dependencies = TRUE)
     library("tidyverse", character.only = TRUE)
 }
 
-if (!require("drc", character.only = TRUE)) {
-    install.packages("drc", dependencies = TRUE)
-    library("drc", character.only = TRUE)
-}
-
-if (!require("broom", character.only = TRUE)) {
-    install.packages("broom", dependencies = TRUE)
-    library("broom", character.only = TRUE)
-}
-
-if (!require("reticulate", character.only = TRUE)) {
-    install.packages("reticulate", dependencies = TRUE)
-    library("reticulate", character.only = TRUE)
-}
-
-theme_set(theme_bw())
 source(file.path(str_remove(getwd(), "/inst/rmd"), "R/funcs.R"))
 
 ## Define demo datasets
@@ -75,10 +61,14 @@ data_demo_inhi <- data.frame(
 ```{r, results = 'hide'}
 m1 <- fit_4pl_model(data_demo_inhi)
 m2 <- fit_4pl_model(data_demo_inhi, constr_top = 35, algorithm = "port")
+m3 <- fit_4pl_model(data_demo_inhi, constr_h = -0.2, algorithm = "port")
+m4 <- fit_4pl_model(data_demo_inhi, constr_h = -1.5, algorithm = "port")
 
-par(mfrow = c(1, 2))
+par(mfrow = c(2, 2))
 plot_dose_response_curve(m1, data_demo_inhi, main = "Without Constriaints")
 plot_dose_response_curve(m2, data_demo_inhi, main = "With Top Constriaint")
+plot_dose_response_curve(m3, data_demo_inhi, main = "With Hill Constriaint (Heavy)")
+plot_dose_response_curve(m4, data_demo_inhi, main = "With Hill Constriaint (Light)")
 ```
 
 ### Stimulation
@@ -96,97 +86,94 @@ plot_dose_response_curve(m3, data_demo_stim, main = "Top Constriaint")
 plot_dose_response_curve(m4, data_demo_stim, main = "Both Constriaints")
 ```
 
-## Simulations
+## Simulations and Cross-Software Validation - Python
 
-### Inhibition
-```{r}
+### Inhibition 
+
+#### R
+
+```{r, message = F}
 set.seed(123) # For reproducibility
 inhibition_data <- simulate_dose_response_data(type = "inhibition")
-plot(inhibition_data$dose, inhibition_data$response, col = "blue", main = "Simulated Inhibition Data")
-fit <- fit_4pl_model(inhibition_data, log50_0 = log10(50), h_0=1, top_0 = 100)
-y <- fit$bottom + (fit$top - fit$bottom)/(1 + 10^((fit$logEC50 - log10(inhibition_data$dose)) * fit$h)) # Y data
-lines(inhibition_data$dose, y, col="blue", lwd=2) # plot the curve
+source_python(file.path(str_remove(getwd(), "/inst/rmd"), "script/funcs.py"))
+py$dose <- inhibition_data$dose
+py$response <- inhibition_data$response
+fit <- fit_4pl_model(inhibition_data, ec50 = 50, h=1, top = 100)
+```
+
+#### Python
+
+```{python, message = F, results='hide'}
+fit_py = fit_4pl_model_py(dose, response)
+fitted_response = calculate_fitted_response(dose, fit_py)
+```
+
+```{r r-plot_inhi, fig.show='hold', message = F}
+plot_dose_response_with_fit(inhibition_data, coef = fit)
+```
+
+```{python py-plot_inhi, fig.show='hold'}
+plot_dose_response_with_fit_py(dose, response, fitted_response, title="Inhibited Dose-Response Curve")
+```
+
+```{r, echo = F}
+r.fit_py <- py$fit_py
+coeff_estimate <- data.frame(
+  Estimates_R = c(fit[[1]], fit[[2]], fit[[3]], fit[[4]]),
+  Estimates_Python = r.fit_py)
+
+knitr::kable(coeff_estimate, caption = "Parameter Estimates from R and Python (Inhibition)")
 ```
 
 ### Stimulation
-```{r}
+
+#### R
+
+```{r, message = F}
 stimulation_data <- simulate_dose_response_data(type = "stimulation")
 # fit_drm <- dose_response_analysis(stimulation_data, response_type = "stimulation", constrained = T)
 # fit_drm$coefficients
-# par(mfrow = c(2, 1))
-# plot(fit_stimulation, main = "crd")
-plot(stimulation_data$dose, stimulation_data$response, col = "red", main = "Simulated Stimulation Data")
-fit <- fit_4pl_model(stimulation_data, log50_0 = log10(50), h_0=1, top_0 = 100)
-y <- fit$bottom + (fit$top - fit$bottom)/(1 + 10^((fit$logEC50 - log10(inhibition_data$dose)) * fit$h)) # Y data
-lines(stimulation_data$dose, y, col="red", lwd=2) # plot the curve
+fit_r <- fit_4pl_model(stimulation_data, ec50 = 50, h=1, top = 100)
+py$dose <- stimulation_data$dose
+py$response <- stimulation_data$response
 ```
 
-## Cross-Software Validation - Python
-```{python}
-import subprocess
-import pkg_resources
-required_packages = ["numpy", "scipy", "matplotlib"] 
-installed_packages = {pkg.key for pkg in pkg_resources.working_set}
-missing_packages = [pkg for pkg in required_packages if pkg not in installed_packages]
-import numpy as np
-import matplotlib.pyplot as plt
-from scipy.optimize import curve_fit
+#### Python
 
-if missing_packages:
-    subprocess.check_call(["python", "-m", "pip", "install", *missing_packages])
-
-
-def four_parameter_logistic(x, top, bottom, ec50, hill_slope):
-    return bottom + (top - bottom) / (1 + (x / ec50)**(-hill_slope))
-
-def fit_4pl_model(x_data, y_data, initial_guess=(100, 0, 50, 1)):
-    popt, _ = curve_fit(four_parameter_logistic, x_data, y_data, p0=initial_guess, maxfev=10000)
-    return popt
-  
-def calculate_fitted_response(dose, popt):
-    top, bottom, ec50, hill_slope = popt
-    fitted_response = four_parameter_logistic(dose, top, bottom, ec50, hill_slope)
-    return fitted_response
-
-def simulate_dose_response(n=100, response_type='inhibition', ec50=50, 
-                           hill_coeff=1, max_response=100, min_response=0, noise_level=0.05):
-    dose = np.linspace(min_response, max_response, n)
-
-    if response_type == 'inhibition':
-        response = max_response / (1 + (dose/ec50)**hill_coeff)
-    elif response_type == 'stimulation':
-        response = min_response + (max_response - min_response) * (dose**hill_coeff / (ec50**hill_coeff + dose**hill_coeff))
-    else:
-        raise ValueError("response_type must be 'inhibition' or 'stimulation'")
-
-    # Add random noise to simulate experimental variability
-    response += np.random.normal(0, noise_level * max_response, n)
-
-    return dose, response
-    
-def plot_dose_response_with_fit(dose, response, fitted_response, title="Dose-Response Curve", color = "blue"):
-    plt.figure(figsize=(8, 6))
-    plt.scatter(dose, response, color=color, label='Observed Data')  # Plot observed data points
-    plt.plot(dose, fitted_response, color=color, label='Fitted Curve')  # Plot fitted curve
-    plt.title(title)
-    plt.xlabel("Dose")
-    plt.ylabel("Response")
-    plt.legend()
-    plt.grid(True)
-    plt.show()
+```{python, message = F} 
+fit_py = fit_4pl_model_py(dose, response)
+fitted_response = calculate_fitted_response(dose, fit_py)
 ```
 
-```{python, message = F}
-dose, response = simulate_dose_response(response_type='inhibition')
-popt = fit_4pl_model(dose, response)
-fitted_response = calculate_fitted_response(dose, popt)
-plot_dose_response_with_fit(dose, response, fitted_response, title="Inhibited Dose-Response Curve")
+```{r r-plot, fig.show='hold', message = F}
+plot_dose_response_with_fit(stimulation_data, coef = fit_r)
 ```
 
-```{python} 
-dose, response = simulate_dose_response(response_type='stimulation')
-popt = fit_4pl_model(dose, response)
-fitted_response = calculate_fitted_response(dose, popt)
-plot_dose_response_with_fit(dose, response, fitted_response, title="Simulated Dose-Response Curve", color = "red")
+```{python py-plot, fig.show='hold', echo = F}
+plot_dose_response_with_fit_py(dose, response, fitted_response, title="Simulated Dose-Response Curve", color = "red")
+```
+
+```{r, echo = F}
+r.fit_py <- py$fit_py
+coeff_estimate <- data.frame(
+  Estimates_R = c(fit_r[[1]], fit_r[[2]], fit_r[[3]], fit_r[[4]]),
+  Estimates_Python = r.fit_py)
+
+knitr::kable(coeff_estimate, caption = "Parameter Estimates from R and Python (Stimulation)")
+```
+
+
+```{python, message = F, message = F}
+# dose, response = simulate_dose_response(response_type='inhibition')
+# fit_py = fit_4pl_model_py(dose, response)
+# fitted_response = calculate_fitted_response(dose, fit_py)
+# plot_dose_response_with_fit(dose, response, fitted_response, title="Inhibited Dose-Response Curve")
+```
+
+```{python, message = F} 
+# dose, response = simulate_dose_response(response_type='stimulation')
+# fit_py = fit_4pl_model_py(dose, response)
+# fitted_response = calculate_fitted_response(dose, fit_py)
+# plot_dose_response_with_fit(dose, response, fitted_response, title="Simulated Dose-Response Curve", color = "red")
 ```
 
